# NoticIA

./: .dockerignore  .env.example  .gitignore  AGENT-PROFILES.md  ARCHITECTURE-MASTER.md  AUDITORIA-2026-03-18.md  AUDITORIA-FORENSE-2026-03-20.html  CLAUDE.md  COWORK-ARTICLE-PROCESSOR.md  COWORK-EQUIPA-TECNICA.md  COWORK-PIPELINE-ESCRITOR.md  COWORK-PIPELINE-TRIAGEM.md  COWORK-SOURCE-FINDER.md  DIARIO-DE-BORDO.md  ENGENHEIRO-CHEFE-PROMPT.md  ENGINEER-GUIDE.md  FACT-CHECKING.md  HETERONIMOS-PROMPTS.md  Makefile  ORACLE-VM-INSTRUCTIONS.md  PIPELINE_COMPLETO.md  PROMPT-CARIMBOS-VERIFICACAO.md  PROMPT-CRONISTA-PERFIL.md  PROMPT-FIX-FRESHNESS-COLETORES.md  PROMPT-HETERONIMOS.md  RELATORIO_ARQUITETURA.md  ROADMAP.md  TELEGRAM-EXPANSION-PLAN.md  docker-compose.yml  eslint.config.mjs  next.config.ts  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  vercel.json
pipeline/: .dockerignore  .env.example  Dockerfile  fly.toml  main.py  pyproject.toml  requirements-docker.txt  requirements-scheduler.txt  requirements.txt
pipeline/src/openclaw/: __init__.py  bridge.py  collector_runner.py  config.py  engenheiro_pipeline.py  logging_config.py  models.py  scheduler_ollama.py
pipeline/src/openclaw/agents/: __init__.py  coverage_analyzer.py  cronistas.py  dispatcher.py  dossie.py  editorial_decisor.py  escritor.py  fact_checker.py  fact_checker_parallel.py  injetor.py  ollama_client.py  telegram_editor.py  triagem.py
pipeline/tests/: conftest.py  test_ai_detector.py  test_config.py  test_curador.py  test_models.py  test_publisher.py  test_reporters.py  test_scoring.py
(+275 files in other folders)
